--- a/package.json
+++ b/package.json
@@ -1,25 +1,26 @@
 {
-  "name": "ti_whatsapp_bot",
-  "version": "1.0.0",
-  "description": "Whatsapp Bot untuk Grup TI Semester 3",
-  "keywords": [
-    "bot",
-    "whatsapp",
-    "whatsapp-bot"
-  ],
-  "license": "MIT",
-  "author": "MowlandCodes",
-  "type": "commonjs",
-  "main": "app.js",
-  "scripts": {
-    "start": "node app.js",
-    "test": "echo \"Error: no test specified\" && exit 1"
-  },
-  "dependencies": {
-    "@cacheable/node-cache": "^1.5.4",
-    "@hapi/boom": "^10.0.1",
-    "baileys": "^6.7.16",
-    "chalk": "^5.4.1",
-    "nodemon": "^3.1.9"
-  }
+    "name": "ti_whatsapp_bot",
+    "version": "1.0.0",
+    "description": "Whatsapp Bot untuk Grup TI Semester 3",
+    "keywords": [
+        "bot",
+        "whatsapp",
+        "whatsapp-bot"
+    ],
+    "license": "MIT",
+    "author": "MowlandCodes",
+    "type": "commonjs",
+    "main": "app.js",
+    "scripts": {
+        "start": "node app.js",
+        "test": "echo \"Error: no test specified\" && exit 1"
+    },
+    "dependencies": {
+        "@cacheable/node-cache": "^1.5.4",
+        "@hapi/boom": "^10.0.1",
+        "baileys": "^6.7.16",
+        "chalk": "^5.4.1",
+        "link-preview-js": "^3.0.14",
+        "nodemon": "^3.1.9"
+    }
 }
