--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
         "baileys": "^6.7.16",
         "chalk": "^5.4.1",
         "link-preview-js": "^3.0.14",
+        "node-os-utils": "^1.3.7",
         "nodemon": "^3.1.9"
     }
 }
