--- a/package.json
+++ b/package.json
@@ -18,8 +18,10 @@
     "dependencies": {
         "@cacheable/node-cache": "^1.5.4",
         "@hapi/boom": "^10.0.1",
+        "badwords-list": "^2.0.1-4",
         "baileys": "^6.7.16",
         "chalk": "^5.4.1",
+        "indonesian-badwords": "^1.0.1",
         "link-preview-js": "^3.0.14",
         "node-os-utils": "^1.3.7",
         "nodemon": "^3.1.9"
