--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
         "link-preview-js": "^3.0.14",
         "node-os-utils": "^1.3.7",
         "nodemon": "^3.1.9",
+        "pino": "^9.6.0",
         "zustand": "^5.0.3"
     }
 }
